# ai-native-knowledge-base

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/kb-ingest-originals/: SKILL.md
.agents/skills/kb-ingest-originals/agents/: openai.yaml
.github/workflows/: validate.yml
claims/: README.md
docs/: architecture.md
learning/: README.md
logs/: README.md  contradiction-log.md  decision-log.md  ingest-log.md
originals/: README.md
questions/: README.md
raw/: README.md
scripts/: __init__.py  frontmatter.py  ingest.py  validate_kb.py
tasks/: README.md
templates/: claim.md  learning-manifest.json  raw-imported.md  raw-web.md  wiki-topic.md
tests/: test_ingest.py  test_validate_kb.py
wiki/: README.md
