[project]
name = "ai-native-knowledge-base"
version = "0.1.0"
description = "An AI-maintained, source-grounded knowledge base template."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
ingest = ["markitdown[all]"]

[tool.unittest]
start-directory = "tests"
